--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
       }
       steps {
         // Checkout your Java project from Git
-        git(url: 'https://github.com/Arjun0889/Jenkins-Zero-To-Hero/blob/main/HelloWorld.java', branch: 'main')
+        git(url: 'https://github.com/Arjun0889/Jenkins-Zero-To-Hero.git', branch: 'main')
         
         // Build and test your Java application
         sh 'mvn clean install'  // Modify this command as per your project's build process
@@ -22,7 +22,7 @@ pipeline {
       }
       steps {
         // Checkout your Node.js project from Git
-        git(url: 'https://github.com/Arjun0889/Jenkins-Zero-To-Hero/blob/main/app.js', branch: 'main')
+        git(url: 'https://github.com/Arjun0889/Jenkins-Zero-To-Hero.git', branch: 'main')
         
         // Install Node.js dependencies
         sh 'npm install'
